--- a/src/components/nav/navBar.scss
+++ b/src/components/nav/navBar.scss
@@ -1,10 +1,17 @@
 .navbar {
   display: flex;
   flex-wrap: nowrap;
-  justify-content: left;
+  justify-content: space-around;
+  background-color: white;
+  align-items: center;
 }
 
-.navbar__item {
+li.navbar__item {
   flex-basis: 20%;
   list-style-type: none;
+  padding: 20px;
+}
+
+ul.navbar {
+  margin: 0;
 }
