--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,6 @@
 @import 'variables';
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
+@import 'bootstrap/dist/css/bootstrap.min.css';
 
 body {
   background-color: $favColor;
